Fix flex-wrap in section-one of style.css

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     padding: 50px 50px 100px;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .left {
